Bug 1730334 - Give attachmentcell-icon a min-width to prevent XUL layout stretching. r=aleca a=wsmwk
A xul:hbox will ignore a html:img CSS width, and will instead stretch the image to its "natural" width. Instead, we need to also give an additional CSS min-width.

--- a/mail/themes/shared/mail/attachmentList.css
+++ b/mail/themes/shared/mail/attachmentList.css
@@ -158,6 +158,7 @@
   margin: 1px;
   width: 16px;
   height: 16px;
+  min-width: 16px;
 }
 
 .attachmentcell-icon.invalid-src {
